k8s_mern_alb_extDNS_autoscaler_aws_secrets_grafana/frontend_deployment.yml
# multiple files for deployment are needed to not cause conflicts with branches bc of the pipelines

apiVersion: apps/v1
kind: Deployment 
metadata:
  name: frontend-microservice
  labels:
    app: mern-frontend
spec:
  replicas: 5 #it was 2 I up it to 5 to test cluster autoscaler
  selector:
    matchLabels:
      app: mern-frontend
  template:  
    metadata:
      labels: 
        app: mern-frontend
    spec:      
      containers:
        - name: mern-frontend # if it does not work tag or image wrong
          image: 438555236323.dkr.ecr.us-east-1.amazonaws.com/eks_frontend
          ports: 
            - containerPort: 80
